--- a/common.css
+++ b/common.css
@@ -9,14 +9,13 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 0px 2px black;
+    padding: 10px;
+    background-color: burlywood;
 }
 
-#firstInput {
-    padding: 6px;
-}
-
-#secondInput {
-    padding: 6px;
+body {
+    font-family: prata;
 }
 
 #grid {
@@ -24,21 +23,17 @@ header {
     text-align: center;
 }
 
-#sum {
-    width: 70px;
-    text-align: center;
-}
-
-#longBox {
-    width: 500px;
-    text-align: center;
-}
-
-#add {
-    width: 80px;
-    text-align: center;
-}
-
 #linksBox {
     text-align: center;
+    box-shadow: 0px 0px 5px black;
+    padding: 20px;
+}
+
+#lowerLinks {
+    padding-top: 10px;
+}
+
+@font-face {
+    font-family: prata;
+    src: url(Font/Prata-Regular.ttf);
 }
